# simulation-skills

./: .gitignore  README.md  agent.md  pyproject.toml
docs/: install.md  skill-boundaries.md
docs/contracts/: v0.1.md
examples/: README.md  __init__.py
examples/air_defense_mesa/: __init__.py  app.py  experiment.json  model.py  run_experiment.py  static_viewer.py
examples/bdi_polarization_mesa/: README.md  __init__.py  experiment.json  model.py  opencode_sampler.py  run_experiment.py  single_run_viewer.py  static_viewer.py
examples/biped_microgravity/: README.md  run_experiment.py  static_viewer.py
examples/des_mesa_queue/: README.md  __init__.py  app.py  experiment.json  model.py  run_experiment.py
examples/field_service_mesa/: __init__.py  experiment.json  legacy_app.py  model.py  run_experiment.py  static_viewer.py
examples/global_shipping_mesa/: README.md  __init__.py  experiment.json  model.py  run_experiment.py  static_viewer.py
examples/global_warming_system_dynamics/: README.md  __init__.py  app.py  experiment.json  index.html  model.py
scripts/: auto_update_skills.py  build_contract_export.py  install_skills.sh  validate_skills.sh
simulation_skills_contracts/: __init__.py  __main__.py  canonical_json.py  fake_adapter.py  registry.py  result_factory.py
skills/sim-adapter/: SKILL.md
tests/: test_abm_source_inspector.py  test_agent_method_registry.py  test_auto_update_skills.py  test_v0_1_clean_install.py  test_v0_1_equipment_maintenance_adapter.py  test_v0_1_fake_adapter.py  test_v0_1_provider_contracts.py  test_v0_1_warehouse_des_adapter.py
(+133 files in other folders)
