[project]
name = "simulation-skills"
version = "0.1.0"
description = "Codex skills and examples for simulation-backed reasoning."
requires-python = ">=3.10"
dependencies = [
  "jsonschema[format]>=4.20",
  "mesa>=3.0",
  "networkx>=3.0",
  "rfc8785==0.1.4",
  "simpy>=4.0",
  "solara[assets]>=1.35",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["examples*", "simulation_skills_contracts*"]

[tool.setuptools.package-data]
simulation_skills_contracts = [
  "conformance/v0_1/*.json",
  "conformance/v0_1/schemas/*.json",
  "conformance/v0_1/fixtures/valid/*.json",
  "conformance/v0_1/fixtures/invalid/*.json",
  "conformance/v0_1/cases/*/*.json",
]

[project.scripts]
simulation-skills-fake-adapter = "simulation_skills_contracts.fake_adapter:main"

[tool.pytest.ini_options]
pythonpath = ["."]
